maint: Fix CSS file layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -355,44 +355,48 @@ main {
 }
 
 /* ----------------------------------------------------  Play button */
+
 .play-button {
-	  width: 214px;
-	  text-align: center;
+	width: 214px;
+	text-align: center;
     position: absolute;
     top:1rem;
     left: -1rem;
 }
 
 .circle {
-	 stroke: #f8aa28;
-	 stroke-dasharray: 650;
-	 stroke-dashoffset: 650;
-	 -webkit-transition: all 0.5s ease-in-out;
-	 opacity: 0.3;
+	stroke: #f8aa28;
+	stroke-dasharray: 650;
+	stroke-dashoffset: 650;
+    transition: all 0.5s ease-in-out;
+    -webkit-transition: all 0.5s ease-in-out;
+	opacity: 0.3;
 }
 
 .playBut {
-	  /* border: 1px solid red;*/
+	/* border: 1px solid red;*/
     text-align: center;
     display: inline-block;
+    transition: all 0.5s ease;
     -webkit-transition: all 0.5s ease;
     background-color: #f5deb300;
     border: none;
 }
 
 .playBut .triangle {
-	  -webkit-transition: all 0.7s ease-in-out;
-	  stroke-dasharray: 240;
-	  stroke-dashoffset: 480;
-	  stroke: #000;
-	  transform: translateY(0);
+	transition: all 0.7s ease-in-out;
+	-webkit-transition: all 0.7s ease-in-out;
+	stroke-dasharray: 240;
+	stroke-dashoffset: 480;
+	stroke: #000;
+	transform: translateY(0);
 }
 
 .playBut:hover .triangle {
-	  stroke-dashoffset: 0;
-	  opacity: 1;
-	  stroke: #f8aa28;
-	  animation: nudge 0.7s ease-in-out;
+	stroke-dashoffset: 0;
+	opacity: 1;
+	stroke: #f8aa28;
+	animation: nudge 0.7s ease-in-out;
 }
 
 /* ----------------------------------------------------  Spider */
@@ -429,26 +433,30 @@ main {
 }
 
 @keyframes nudge {
-	  0% {
-		    transform: translateX(0);
-	  }
-	  30% {
-		    transform: translateX(-5px);
-	  }
-	  50% {
-		    transform: translateX(5px);
-	  }
-	  70% {
-		    transform: translateX(-2px);
-	  }
-	  100% {
-		    transform: translateX(0);
-	  }
+	0% {
+		transform: translateX(0);
+	}
+
+	30% {
+	    transform: translateX(-5px);
+	}
+
+	50% {
+	    transform: translateX(5px);
+	}
+
+	70% {
+		transform: translateX(-2px);
+	}
+    
+	100% {
+	    transform: translateX(0);
+	}
 }
 
 .playBut:hover .circle {
-	  stroke-dashoffset: 0;
-	  opacity: 1;
+	stroke-dashoffset: 0;
+	opacity: 1;
 }
 
 /* ----------------------------------------------------  Media queries */
